# netSim

./: .gitignore  README.md  pyproject.toml
docs/: IMPLICIT_PRESSURE_RELAXATION.md  WORKFLOW_AND_EQUATIONS.md
src/netSim/: __init__.py  case.py  main.py  model.py  reporting.py  solver.py
src/netSim/cases/: __init__.py  steady_water_network.py  steady_water_network_aggressive_elevation.py  steady_water_network_aggressive_elevation_outlet_flow.py  steady_water_network_inlet_flow_boundary.py  steady_water_network_no_fittings.py  steady_water_network_two_flow_boundaries.py
src/netSim/closures/: __init__.py  friction.py  gravity.py  minor_losses.py  pressure_drop.py
src/netSim/core/: __init__.py  case.py  components.py  network.py  results.py  settings.py  state.py
src/netSim/examples/: __init__.py  steady_water_network.py  steady_water_network_aggressive_elevation.py  steady_water_network_aggressive_elevation_outlet_flow.py  steady_water_network_inlet_flow_boundary.py  steady_water_network_no_fittings.py  steady_water_network_two_flow_boundaries.py
src/netSim/gui/: __init__.py  app.py  io.py  model.py
src/netSim/io/: __init__.py  reporting.py
src/netSim/numerics/: __init__.py  assembly.py  convergence.py  linear_solvers.py  (+1 more)
tests/: test_gui_io.py  test_gui_model.py  test_nonlinear_solvers.py  test_tutorial_suite.py
tutorials/: README.md
tutorials/steady_isothermal_incompressible/: README.md
tutorials/steady_isothermal_incompressible_implicit_alpha_09/: README.md
tutorials/steady_isothermal_incompressible_implicit_alpha_095/: README.md
(+30 files in other folders)
