[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netSim"
version = "0.1.0"
description = "Steady incompressible network-flow solver prototype."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

